--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashActivity">
+        android:theme="@style/AppThemeTransparentStatusBar">
+        <activity android:name=".activities.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ExpenseActivity" />
-        <activity android:name=".activities.AddExpenseActivity"></activity>
+        <activity android:name=".activities.ExpenseActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AddExpenseActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
