--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bau.com.myexpensesapp">
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 
     <application
         android:allowBackup="true"
@@ -21,6 +23,13 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activities.AddExpenseActivity"
             android:screenOrientation="portrait"/>
+        <service android:name=".network.ServerCommunication"
+            android:enabled="true"
+            android:exported="false"
+            />
+
+
     </application>
+
 
 </manifest>
